# bank-fraud-detection

./: .gitignore  README.md  app.py  banktransactionfrauddetection.ipynb  generate_labels.py  main.py  prepare.py  pyproject.toml  render.yaml  requirements.txt  reshape_dataset.py  syria_campaign_donation_anomaly.ipynb  watchman.py
.history/: app_20260426133821.py  app_20260426134048.py  app_20260426134142.py  app_20260426142904.py
artifacts/: eda_cache.parquet  encoders.joblib  importances.joblib  iso_model.joblib  lr_model.joblib  meta.json  metrics.json  risk_df.parquet  scaler.joblib  shap_values.parquet
