[project]
name = "bank-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.12.0",
    "joblib>=1.4.0",
    "jupyter>=1.0.0",
    "llvmlite==0.42.0",
    "matplotlib>=3.8.0",
    "numba==0.59.1",
    "numpy>=1.26,<2.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "shap==0.45.0",
    "streamlit>=1.35.0",
    "watchdog>=4.0.0",
]
